<resources>
    <string name="app_name">Seahawk Market</string>
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="welcome_message">Hi, </string>
    <string name="Item_name">Name of item</string>
    <string name="Item_description">Description of item</string>
    <string name="item_price">Price of item</string>
    <string name="submit">List item</string>
    <string name="about_label">About</string>
    <string name="profile_label">Profile</string>
    <string name="user">User</string>
    <string name="profile_email">Profile Email</string>
    <string name="my_items">My Items</string>
    <string name="post_item">List an item for sale</string>
    <string name="login_title">Welcome to Seahawk Market!</string>
    <string name="main_title">Items on the market</string>
    <string name="edit_label">Edit item</string>
    <string name="delete_label">Delete item</string>
    <string name="search_hint">Search by item name</string>
    <string name="posted_on">Posted on: %1$s</string>
    <string name="contact">Contact Seller</string>
    <string name="email_example">Hi! I would like to purchase </string>
</resources>
