<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailsActivity">

    <ImageView
        android:id="@+id/itemDetailImage"
        android:layout_width="290dp"
        android:layout_height="262dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_cardview_image" />

    <TextView
        android:id="@+id/itemDetailTitle"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:text="@string/Item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemEmail" />

    <TextView
        android:id="@+id/itemDetailPrice"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/item_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailImage" />

    <TextView
        android:id="@+id/itemDetailDescription"
        android:layout_width="290dp"
        android:layout_height="170dp"
        android:text="@string/Item_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailPrice"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/itemEmail"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:text="@string/email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailTitle"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/userDetail"
        android:layout_width="293dp"
        android:layout_height="40dp"
        android:text="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailDescription" />

        app:layout_constraintTop_toBottomOf="@+id/itemDetailImage" />

</androidx.constraintlayout.widget.ConstraintLayout>