<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_hdpi"
    tools:context=".LoginActivity">

    <!--    Include the toolbar-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <!--    This button is just for quick testing and will be removed. -->

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorLoginText"
        android:ems="10"
        android:hint="example@uncw.edu"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorLoginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorLoginText"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorLoginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:onClick="signIn"
        android:text="@string/login_label"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="120dp"
        android:layout_height="60dp"

        android:layout_marginTop="12dp"
        android:onClick="createAccount"
        android:text="@string/sign_up_label"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/launchMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchMain"
        android:text="Launch Main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <TextView
        android:id="@+id/title"
        android:layout_width="345dp"
        android:layout_height="144dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginTop="220dp"
        android:text="@string/email_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="@string/password_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>